# asteroid-diamonds

./: CMakeLists.txt  asteroid-diamonds.desktop.template  asteroid-diamonds.in
i18n/: asteroid-diamonds.ace.ts  asteroid-diamonds.ar_AR.ts  asteroid-diamonds.ast.ts  asteroid-diamonds.az.ts  asteroid-diamonds.be.ts  asteroid-diamonds.bqi.ts  asteroid-diamonds.cs.ts  asteroid-diamonds.da.ts  asteroid-diamonds.de_DE.ts  asteroid-diamonds.el.ts  asteroid-diamonds.eo.ts  asteroid-diamonds.es.ts  asteroid-diamonds.es_AR.ts  asteroid-diamonds.fa.ts  asteroid-diamonds.fi.ts  asteroid-diamonds.fr.ts  asteroid-diamonds.gl.ts  asteroid-diamonds.he.ts  asteroid-diamonds.hi.ts  asteroid-diamonds.hr.ts  asteroid-diamonds.ia.ts  asteroid-diamonds.id.ts  asteroid-diamonds.isv.ts  asteroid-diamonds.it.ts  asteroid-diamonds.ko.ts  asteroid-diamonds.lt.ts  asteroid-diamonds.mr.ts  asteroid-diamonds.nb_NO.ts  asteroid-diamonds.oc.ts  asteroid-diamonds.pl.ts  asteroid-diamonds.pt.ts  asteroid-diamonds.pt_BR.ts  asteroid-diamonds.pt_PT.ts  asteroid-diamonds.ro.ts  asteroid-diamonds.ru.ts  asteroid-diamonds.rue.ts  asteroid-diamonds.sk.ts  asteroid-diamonds.sv.ts  asteroid-diamonds.ta.ts  asteroid-diamonds.te.ts  (+8 more)
src/: CMakeLists.txt  Game.qml  main.qml
